połączenie z bazą danych

--- a/biblioteka13263/appsettings.json
+++ b/biblioteka13263/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DevConnection": "Server=(localdb)\\MSSQLLocalDB;Database=library;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
