--- a/biblioteka13263/appsettings.json
+++ b/biblioteka13263/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DevConnection": "Server=(localdb)\\MSSQLLocalDB;Database=library;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DevConnection": "Server=(localdb)\\MSSQLLocalDB;Database=library;Trusted_Connection=True;TrustServerCertificate=True;",
+    "AplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=biblioteka13263;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
